// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationList /> Default story renders snapshot 1`] = `
<div
  class="notification-list"
>
  <div
    class="notification-list__item"
  >
    <a
      href="#"
    >
      <div
        class="notification-list__item--content"
      >
        <div
          class="notification-list__item--title"
        >
          English Teacher
           
          gave you feedback
        </div>
        <div
          class="notification-item-subtitle text-muted"
        >
          now
           · 
          Outsiders on Trial: Self Awareness - Trial Brief Outline
        </div>
      </div>
    </a>
    <button
      aria-label="Mark as read"
      class="notification-list__item--button"
    />
  </div>
  <div
    class="notification-list__item"
  >
    <a
      href="#"
    >
      <div
        class="notification-list__item--content"
      >
        <div
          class="notification-list__item--title"
        >
          Math Teacher
           
          gave you feedback
        </div>
        <div
          class="notification-item-subtitle text-muted"
        >
          now
           · 
          Unit 3: Measuring Circles - Identifying Circumference and Diameter
        </div>
      </div>
    </a>
    <button
      aria-label="Mark as read"
      class="notification-list__item--button"
    />
  </div>
</div>
`;

exports[`<NotificationList /> MarkedAsRead story renders snapshot 1`] = `
<div
  class="notification-list"
>
  <div
    class="notification-list__item notification-list__item--read"
  >
    <a
      href="#"
    >
      <div
        class="notification-list__item--content"
      >
        <div
          class="notification-list__item--title"
        >
          English Teacher
           
          gave you feedback
        </div>
        <div
          class="notification-item-subtitle text-muted"
        >
          now
           · 
          Outsiders on Trial: Self Awareness - Trial Brief Outline
        </div>
      </div>
    </a>
    <button
      aria-label="Mark as unread"
      class="notification-list__item--button"
    />
  </div>
  <div
    class="notification-list__item notification-list__item--read"
  >
    <a
      href="#"
    >
      <div
        class="notification-list__item--content"
      >
        <div
          class="notification-list__item--title"
        >
          Math Teacher
           
          gave you feedback
        </div>
        <div
          class="notification-item-subtitle text-muted"
        >
          now
           · 
          Unit 3: Measuring Circles - Identifying Circumference and Diameter
        </div>
      </div>
    </a>
    <button
      aria-label="Mark as unread"
      class="notification-list__item--button"
    />
  </div>
</div>
`;
